# nrf-rust-test-power

./: README.md  rust-toolchain.toml
firmware/: Cargo.toml  app.hex  build.rs  complete.hex  flash.sh  nrf52dk_memory.x
firmware/.cargo/: config.toml
