[package]
authors = ["Gorazd Kovacic"]
name = "ble-async-demo"
edition = "2021"
version = "0.1.0"




[features]
default = ["nrf52dk"] # note: pass default-features=false and make things explicit in flash.sh
nrf52dk = ["embassy-nrf/nrf52832", "nrf-softdevice/nrf52832", "nrf-softdevice/s132"]
microbit-v2 = ["embassy-nrf/nrf52833", "nrf-softdevice/nrf52833", "nrf-softdevice/s140"]
nrf52840dk = ["embassy-nrf/nrf52840", "nrf-softdevice/nrf52840", "nrf-softdevice/s140"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
defmt = "0.3.4"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "0.1.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "defmt", "integrated-timers"]}
embassy-time = { version = "*", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "*", features = ["nightly", "defmt"] }
embassy-futures = { version = "*" }
embassy-nrf = { version = "*", features = ["nightly", "time-driver-rtc1", "defmt", "unstable-traits", "unstable-pac", "nfc-pins-as-gpio"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", rev="3b3eabb5383ae16a7772924f5301e6a79d0a591f", features = ["nightly", "defmt", "ble-gatt-server", "ble-peripheral", "critical-section-impl", "evt-max-size-512"] }
futures = { version = "0.3.5", default-features = false }
heapless = { version = "0.7.16", features = ["defmt-impl"] }
static_cell = "1.0.0"
cty = "0.2.2"
nrf-softdevice-s132 = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "a0467c55b09c4b48f4f5a428f6ba56734804b638" }
nrfxlib-sys = "2.1"
embedded-alloc = "0.5.0"
embedded-storage = "0.3.0"
embedded-storage-async = {version = "0.4.0"}
futures-intrusive = { version = "^0.5", default-features = false }  # 
#sequential-storage = "0.2.1"
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
async-recursion = "1.0.4"
#ekv = { git = "https://github.com/embassy-rs/ekv.git", rev = "5669092c57aafc8d3d552b94a1a3a0ea85896a8c", features = [
#    "crc",
#    "page-size-4096",
#    "align-4",
#    "max-page-count-20",
#] }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.15", default-features = false }
#num-derive = { version = "0.3", default-features = false }
enum-primitive-derive = "0.2.2"



[build-dependencies]
bindgen = "0.63.0"
cc = "1.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
# https://matrix.to/#/!BHcierreUuwCMxVqOf:matrix.org/$9ORitaxa4HPAVnADb_f_Cq2cP6o9pwa2H55N-Uw7QYg?via=matrix.org&via=psion.agg.io&via=tchncs.de
debug = 2
debug-assertions = false # <-
incremental = false
lto = true
opt-level = 'z'          # <-
overflow-checks = false  # <-
panic = "abort"

[profile.release-production] # cargo build --profile release-production
inherits = "release"
# https://matrix.to/#/!BHcierreUuwCMxVqOf:matrix.org/$9ORitaxa4HPAVnADb_f_Cq2cP6o9pwa2H55N-Uw7QYg?via=matrix.org&via=psion.agg.io&via=tchncs.de
debug = 2
opt-level = "z"
# Possible string values of strip are "none", "debuginfo", and "symbols". The default is "none". true == 'symbols'
#strip = 'symbols'
lto = true
panic = "abort"


# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "37a1e9f971214c11a614b06b230be27c688fff1d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0dea7b02d6d320efabede5d7e5470bb0d42cfa88" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "37a1e9f971214c11a614b06b230be27c688fff1d" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "37a1e9f971214c11a614b06b230be27c688fff1d" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy", rev = "37a1e9f971214c11a614b06b230be27c688fff1d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "37a1e9f971214c11a614b06b230be27c688fff1d" }
